using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class StringData : MonoBehaviour
{
    //Methods
    public static string invokeMethodName = "UpdateTarget";

    //Animator Vars
    public static string enemyTag = "Enemy";
    public static string flyingEnemyTag = "FlyingEnemy";
    public static string idle = "Idle";
    public static string move = "Move";
    public static string attack = "Attack";
    public static string death = "Death";
    public static string fillAmount = "fillAmount";

    //Controls
    public static string horizontal = "Horizontal";
    public static string vertical = "Vertical";
    public static string mouseScrollWheel = "Mouse ScrollWheel";

    //Scene Names
    public static string mainScene = "Main Scene";

    //Tags & Layers
    public static string untagged = "Untagged";
    public static string groundTag = "Ground";
    public static string wallTag = "Wall";
    public static string BuildNode = "BuildNode";
    public static string DemolishNode = "DemolishNode";
    public static string TowerButton01 = "TowerButton01";
    public static string TowerButton02 = "TowerButton02";
    public static string TowerButton03 = "TowerButton03";
    public static string TowerButton04 = "TowerButton04";

    public static string TowerName01 = "Crossbow Tower Lv1";
    public static string TowerName02 = "Cannon Tower Lv1";
    public static string TowerName03 = "Fire Tower Lv1";
    public static string TowerName04 = "Acid Tower Lv1";
}
